--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Introduction to Software Engineering</h1>
+    <img src="https://c8.alamy.com/comp/G2NGCM/software-engineering-chart-with-keywords-and-icons-sketch-G2NGCM.jpg" alt="software engineering">
     <p>This is a beginner friendly program introduced by ALX to train indiginous africans in the field of software engineering</p>
     <p>The program will require 20 hours a week to work on projects</p>
     <h2> Course Struture</h2>
