Added a link to view tweets

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -26,7 +26,7 @@
     <li>The Intranet
     <li>GitHub Repository
     </ul>
-    
+    <p>Checkout my tweets <a href="tweets.html">here.</a></p>
     
 </body>
 </html>
