Added more contents and structured all pages using the same  format

--- a/html_basic/basic_index.html
+++ b/html_basic/basic_index.html
@@ -6,6 +6,18 @@
     <title>My First Html Document with ALX SWE</title>
 </head>
 <body>
-    
+    <header> 
+        <ul>
+            <li><a href="basic_index.html"></a>Basic Page</li>
+            <li><a href="index.html"></a>Homepage</li>
+            <li><a href="tweets.html"></a>Tweets</li>
+        </ul>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+        <p>Made by Bright Eshun. Contact me <a href="https://github.com/Bright136" target="_blank">here</a></p>
+    </footer>
 </body>
 </html>
