--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -6,10 +6,24 @@
     <title>My First Html Document with ALX SWE</title>
 </head>
 <body>
-    <p>See tweet below</p>
-    <blockquote class="twitter-tweet" data-lang="en" data-theme="dark"><p lang="en" dir="ltr">Google should just employ me.</p>&mdash; Bright Eshun (@bright_eshun_) <a href="https://twitter.com/bright_eshun_/status/1672438320926695425?ref_src=twsrc%5Etfw">June 24, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
-    <a href="index.html">Go to homepage</a>
+    <header> 
+        <ul>
+            <li><a href="basic_index.html"></a>Basic Page</li>
+            <li><a href="index.html"></a>Homepage</li>
+            <li><a href="tweets.html"></a>Tweets</li>
+        </ul>
+    </header>
+    <main>
+        <article>
+            <p>See tweet below</p>
+            <blockquote class="twitter-tweet" data-lang="en" data-theme="dark"><p lang="en" dir="ltr">Google should just employ me.</p>&mdash; Bright Eshun (@bright_eshun_) <a href="https://twitter.com/bright_eshun_/status/1672438320926695425?ref_src=twsrc%5Etfw">June 24, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        
+            <a href="index.html">Go to homepage</a>
+        </article>
+    </main>
+    <footer>
+        <p>Made by Bright Eshun. Contact me <a href="https://github.com/Bright136" target="_blank">here</a></p>
+    </footer>
     
 </body>
 </html>
