Changed contents in table

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -58,37 +58,48 @@
                 <tbody>
                     <tr>
                         <td>
-                            James
+                            John
                         </td>
                         <td>
                             25
                         </td>
                         <td>
-                            Kenya
+                            USA
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            Alex
+                            Emily
                         </td>
                         <td>
-                            29
+                            28
                         </td>
                         <td>
-                           Rwanda 
+                           Canada 
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            Emmanuel
+                            Michael
                         </td>
                         <td>
-                            26
+                            32
                         </td>
                         <td>
-                            Nigeria 
+                            Australia 
                         </td>
-                    </tr>                                        
+                    </tr>
+                    <tr>
+                        <td>
+                            Sophia
+                        </td>
+                        <td>
+                            21
+                        </td>
+                        <td>
+                            UK 
+                        </td>
+                    </tr>                                                              
                 </tbody>
 
             </table>
