Fixed webpage links

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -9,9 +9,9 @@
 <body>
     <header> 
         <ul>
-            <li><a href="basic_index.html"></a>Basic Page</li>
-            <li><a href="index.html"></a>Homepage</li>
-            <li><a href="tweets.html"></a>Tweets</li>
+            <li><a href="basic_index.html">Basic Page</a></li>
+            <li><a href="index.html">Homepage</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
         </ul>
     </header>
     <main>
@@ -37,7 +37,7 @@
             <li>The Intranet
             <li>GitHub Repository
             </ul>
-            <p>Checkout my tweets <a href="tweets.html">here.</a></p>
+            <p>Check out my tweets <a href="tweets.html">here.</a></p>
         </article>
         <aside>placeholder to add comment thread later</aside> <br>
         <article>
