--- a/html_basic/basic_index.html
+++ b/html_basic/basic_index.html
@@ -8,9 +8,9 @@
 <body>
     <header> 
         <ul>
-            <li><a href="basic_index.html"></a>Basic Page</li>
-            <li><a href="index.html"></a>Homepage</li>
-            <li><a href="tweets.html"></a>Tweets</li>
+            <li><a href="basic_index.html">Basic Page</a></li>
+            <li><a href="index.html">Homepage</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
         </ul>
     </header>
     <main>
